# bitcoin-mini-miner

./: .gitignore  CMakeLists.txt  build.sh  readme.md  vcpkg.json
blockchain/: CMakeLists.txt  blockchain.sh  vcpkg.json
blockchain/blocks/: 000001.json
blockchain/src/: ApiServer.cpp  ApiServer.h  main.cpp
blockchain/src/lib/: Block.h  BlockLoader.cpp  BlockLoader.h  BlockTemplate.h  Generator.cpp  Generator.h  Hash.h
blockchain/src/routes/: block.h  mine.h  status.h
miner/: CMakeLists.txt  mine.sh
miner/src/: main.cpp
miner/src/api/: api.h
miner/src/lib/: Miner.cpp  Miner.h
src/: main.cpp
src/api/: api.h
